update personal info

--- a/01.advanced-analytics/01.presentation.md
+++ b/01.advanced-analytics/01.presentation.md
@@ -17,8 +17,14 @@ Since 1985 [Proge-Software](https://www.progesoftware.it/) produces high-technol
 
 - LinkedIn: https://www.linkedin.com/in/federico-piai-51499630/
 
-## Alberto Mollica
+## Alberto Mollica Graziano
 
+- Name: Alberto Mollica Graziano
+- Role: Data Scientist
+    - ETL and Data Warehouse with Synapse
+    - Analytics with PowerBI and Azure Analysis Services
+
+- LinkedIn: https://www.linkedin.com/in/alberto-mollica-graziano/
 TODO
 
 ## Agenda
