Data Ingestion: new architecture image, minor changes

--- a/01.advanced-analytics/02.introduction.md
+++ b/01.advanced-analytics/02.introduction.md
@@ -16,13 +16,13 @@
 
 ## Advanced Analytics
 
-With the term Advanced Analytics we refer to the capacity to ingest and synthesize complex data, in simple and user-friendly visual tools, or even static files or presentations. 
+With the term Advanced Analytics we refer to the capacity to integrate and synthesize complex data, in simple and user-friendly visual tools, or even static files or presentations. 
 Analytical tools include capabilities to send alerts in case of abnormal data, or even automatize some operational process.
 
 Some examples:
   - reivew sales data over the years,
   - quickly alert in case of products going out of stock, possibly sending directly a new order,
-  - analyze social media interactions and chat exchanges with support in order to detect main complains from customers
+  - analyze social media interactions and chat exchanges with support in order to detect main complaints from customers
 
 ![medium](./images/example-dashboard-luke-chesser.jpg)
 
@@ -30,7 +30,7 @@ Some examples:
 
 Complex analytics solutions retrieve data from databases and logs of one or more business applications, user files, output of Machine Learning applications, or even the Web (via web scraping) or public CSV files.
 
-In our presentation we will focus on analyzing data from a single relational database.
+In our lesson we will focus on analyzing data from a single relational database.
 
 There are different challenges in an analytical solution, that may be tackled by different people in an enterprise.
 * Define a simple analytical model, that hides the complexity of a full operational model, and simplify the creation of visuals. The most used model in this context is the **star schema**: we will detail it in next chapters.
@@ -43,7 +43,7 @@ A typical architecture for an analytical solution with Azure tools is composed o
 
 Azure released in December 2020 a new tool called Azure Synapse, that provides a unified interface for managing different components of an analytical architecture. We will mention it in the following steps.
 
-![medium](./images/azure-new-architecture.png)
+![medium](./images/data-ingestion-azure.png)
 
 ### Data Lake: Azure Data Lake Storage Gen2
 
@@ -72,9 +72,7 @@ Azure Synapse provides two types of Data Warehouse, that we will detail in our p
 
 ### ETL tools: Azure Synapse or Data Factory
 
-An ETL pipeline is a series of steps needed to extract and trasform data from original sources to its final form in a target source, typically using SQL Queries, Spark codes or other languages.
-
-In Analytical solutions, they are used to copy data into the Data Lake, and then transform them into target analytical model.
+An ETL pipeline is a series of steps defined to extract and trasform data from external sources. In Analytical solutions, they are used to copy data into the Data Lake, and then transform them into target analytical model.
 
 ETL processes typically operate in two ways:
 
@@ -83,7 +81,9 @@ ETL processes typically operate in two ways:
 
 In this presentation we concentrate on the first mode.
 
-ETL Pipelines can be defined within a specific component of Synapse, or using an alternative resource, Azure Data Factory. The interfaces are very similar and both provide graphical tools to define pipelines.
+There are several ways to implement ETL pipelines: graphical tools, Python or other languages scripts: Jupyter Notebook are a common choice. Big Data tools such as Spark can be used according to the volume of data. 
+
+In Azure, ETL Pipelines can be defined within a specific component of Synapse, or using an alternative resource, Azure Data Factory. The interfaces are very similar and both provide graphical tools to define pipelines.
 
 ### Anaytical tools: PowerBI
 
