--- a/01.advanced-analytics/03.azure-synapse.md
+++ b/01.advanced-analytics/03.azure-synapse.md
@@ -16,7 +16,7 @@
 Synapse Studio is an integrated Azure tool that allows managing all the steps of an Analytics pipeline, within a single interface.
 
 In particular it integrates:
-- A tool for designing ETL pipelines, [very similar to Azure Data Factory](https://docs.microsoft.com/en-us/azure/synapse-analytics/data-integration/concepts-data-factory-differences), with a graphical interface to create pipelines
+- A tool for designing ETL pipelines, [very similar to Azure Data Factory](https://docs.microsoft.com/en-us/azure/synapse-analytics/data-integration/concepts-data-factory-differences), with a graphical interface
 - A tool to navigate the data in an Azure Data Lake Storage
 - Two different ways to create a Data Warehouse:
   - a dedicated Relational Database (Dedicated SQL Pool)
