--- a/03.cognitive-services/03.azure-cognitive-services.md
+++ b/03.cognitive-services/03.azure-cognitive-services.md
@@ -17,7 +17,7 @@
 *Azure Cognitive Services* are APIs, SDKs, and services available to help developers build intelligent applications without having direct AI or data science skills or knowledge.
 Azure Cognitive Services enable developers to easily add cognitive features into their applications.
 The goal of Azure Cognitive Services is to help developers create applications that can see, hear, speak, understand, and even begin to reason.
-The *catalog* of services within Azure Cognitive Services can be categorized into five main pillars - *Vision, Speech, Language, Web Search, and Decision*.
+The *catalog* of services within Azure Cognitive Services can be categorized into four main pillars - *Vision, Speech, Language and Decision*.
 
 ### SDKs and API Specification
 
@@ -36,7 +36,7 @@ Actually the following repos exist:
 - [azure-sdk-for-python](https://github.com/Azure/azure-sdk-for-python)
 - [azure-sdk-for-node](https://github.com/Azure/azure-sdk-for-node)
 - [azure-sdk-for-java](https://github.com/Azure/azure-sdk-for-java)
-- **[azure-sdk-for-go](https://github.com/Azure/azure-sdk-for-go)**
+- [azure-sdk-for-go](https://github.com/Azure/azure-sdk-for-go)
 - [azure-sdk-for-js](https://github.com/Azure/azure-sdk-for-js)
 - [azure-sdk-for-php](https://github.com/Azure/azure-sdk-for-php)
 - [azure-sdk-for-ruby](https://github.com/Azure/azure-sdk-for-ruby)
@@ -54,12 +54,9 @@ List of APIS extracted from: https://github.com/MicrosoftDocs/azure-docs/blob/ma
 
 |Service Name|Service Description|
 |:-----------|:------------------|
-|**[Computer Vision](https://docs.microsoft.com/en-us/azure/cognitive-services/computer-vision/overview "Computer Vision")**|The Computer Vision service provides you with access to advanced cognitive algorithms for processing images and returning information.|
-|[Custom Vision Service](https://docs.microsoft.com/en-us/azure/cognitive-services/custom-vision-service/overview "Custom Vision Service")|The Custom Vision Service allows you to build custom image classifiers.|
-|**[Face](https://docs.microsoft.com/en-us/azure/cognitive-services/face/overview "Face")**| The Face service provides access to advanced face algorithms, enabling face attribute detection and recognition.|
-|**[Form Recognizer](https://docs.microsoft.com/en-us/azure/cognitive-services/form-recognizer/overview?tabs=v2-0 "Form Recognizer")**|Form Recognizer identifies and extracts key-value pairs and table data from form documents; then outputs structured data including the relationships in the original file.|
-|[Ink Recognizer](https://docs.microsoft.com/en-us/azure/cognitive-services/ink-recognizer/overview "Ink Recognizer") (Retiring)|Ink Recognizer allows you to recognize and analyze digital ink stroke data, shapes and handwritten content, and output a document structure with all recognized entities.|
-|[Video Indexer](https://docs.microsoft.com/en-us/azure/media-services/video-indexer/video-indexer-overview "Video Indexer")|Video Indexer enables you to extract insights from your video.|
+|[Computer Vision](./computer-vision/index.yml "Computer Vision")|The Computer Vision service provides you with access to advanced cognitive algorithms for processing images and returning information.|
+|[Custom Vision](./custom-vision-service/index.yml "Custom Vision Service")|The Custom Vision Service lets you build, deploy, and improve your own image classifiers. An image classifier is an AI service that applies labels to images, based on their visual characteristics. |
+|[Face](./face/index.yml "Face")| The Face service provides access to advanced face algorithms, enabling face attribute detection and recognition.|
 
 ## Speech APIs
 
@@ -67,48 +64,22 @@ List of APIS extracted from: https://github.com/MicrosoftDocs/azure-docs/blob/ma
 |:-----------|:------------------|
 |[Speech service](https://docs.microsoft.com/en-us/azure/cognitive-services/speech-service/overview "Speech service")|Speech service adds speech-enabled features to applications. Speech service includes various capabilities like speech-to-text, text-to-speech, speech translation, and many more.|
 
-<!--
-|[Speaker Recognition API](./speech-service/speaker-recognition-overview.md "Speaker Recognition API") (Preview)|The Speaker Recognition API provides algorithms for speaker identification and verification.|
-|[Bing Speech](./speech-service/how-to-migrate-from-bing-speech.md "Bing Speech") (Retiring)|The Bing Speech API provides you with an easy way to create speech-enabled features in your applications.|
-|[Translator Speech](/azure/cognitive-services/translator-speech/ "Translator Speech") (Retiring)|Translator Speech is a machine translation service.|
--->
-
 ## Language APIs
 
 |Service Name|Service Description|
 |:-----------|:------------------|
-|[Language Understanding LUIS](https://docs.microsoft.com/en-us/azure/cognitive-services/luis/what-is-luis "Language Understanding")|Language Understanding service (LUIS) allows your application to understand what a person wants in their own words.|
-|[QnA Maker](https://docs.microsoft.com/en-us/azure/cognitive-services/qnamaker/overview/overview "QnA Maker")|QnA Maker allows you to build a question and answer service from your semi-structured content.|
-|**[Text Analytics](https://docs.microsoft.com/en-us/azure/cognitive-services/text-analytics/overview "Text Analytics")**| Text Analytics provides natural language processing over raw text for sentiment analysis, key phrase extraction, and language detection.|
-|**[Translator](https://docs.microsoft.com/en-us/azure/cognitive-services/translator/translator-info-overview "Translator")**|Translator provides machine-based text translation in near real-time.|
-| [Immersive Reader](https://docs.microsoft.com/en-us/azure/cognitive-services/immersive-reader/overview "Immersive Reader") | Immersive Reader adds screen reading and comprehension capabilities to your applications. |
+|[Language service](./language-service/index.yml "Language service")| Azure Language service provides several Natural Language Processing (NLP) features to understand and analyze text.|
+|[Translator](./translator/index.yml "Translator")|Translator provides machine-based text translation in near real time.|
+|[Language Understanding LUIS](./luis/index.yml "Language Understanding")|Language Understanding (LUIS) is a cloud-based conversational AI service that applies custom machine-learning intelligence to a user's conversational or natural language text to predict overall meaning and pull out relevant information. |
+|[QnA Maker](./qnamaker/index.yml "QnA Maker")|QnA Maker allows you to build a question and answer service from your semi-structured content.|
 
 ## Decision APIs
 
 |Service Name|Service Description|
 |:-----------|:------------------|
-|[Anomaly Detector](https://docs.microsoft.com/en-us/azure/cognitive-services/anomaly-detector/overview "Anomaly Detector") |Anomaly Detector allows you to monitor and detect abnormalities in your time series data.|
-|**[Content Moderator](https://docs.microsoft.com/en-us/azure/cognitive-services/content-moderator/overview "Content Moderator")**|Content Moderator provides monitoring for possible offensive, undesirable, and risky content.|
-|[Metrics Advisor](https://docs.microsoft.com/en-us/azure/cognitive-services/metrics-advisor/overview "Metrics Advisor") (Preview) | Metrics Advisor provides customizable anomaly detection on multi-variate time series data, and a fully featured web portal to help you use the service.|
-|[Personalizer](https://docs.microsoft.com/en-us/azure/cognitive-services/personalizer/what-is-personalizer "Personalizer")|Personalizer allows you to choose the best experience to show to your users, learning from their real-time behavior.|
-
-## Search APIs
-
-> [!NOTE]
-> Looking for [Azure Cognitive Search](https://docs.microsoft.com/en-us/azure/search/search-what-is-azure-search)? Although it uses Cognitive Services for some tasks, it's a different search technology that supports other scenarios.
-
-|Service Name|Service Description|
-|:-----------|:------------------|
-|[Bing News Search](https://docs.microsoft.com/en-us/bing/search-apis/bing-news-search/overview "Bing News Search")|Bing News Search returns a list of news articles determined to be relevant to the user's query.|
-|[Bing Video Search](https://docs.microsoft.com/en-us/azure/cognitive-services/bing-video-search/overview "Bing Video Search")|Bing Video Search returns a list of videos determined to be relevant to the user's query.|
-|[Bing Web Search](.https://docs.microsoft.com/en-us/azure/cognitive-services/bing-web-search/overview "Bing Web Search")|Bing Web Search returns a list of search results determined to be relevant to the user's query.|
-|[Bing Autosuggest](https://docs.microsoft.com/en-us/bing/search-apis/bing-autosuggest/overview "Bing Autosuggest")|Bing Autosuggest allows you to send a partial search query term to Bing and get back a list of suggested queries.|
-|[Bing Custom Search](https://docs.microsoft.com/en-us/bing/search-apis/bing-custom-search/overview "Bing Custom Search")|Bing Custom Search allows you to create tailored search experiences for topics that you care about.|
-|[Bing Entity Search](https://docs.microsoft.com/en-us/azure/cognitive-services/bing-entities-search/overview "Bing Entity Search")|Bing Entity Search returns information about entities that Bing determines are relevant to a user's query.|
-|[Bing Image Search](https://docs.microsoft.com/en-us/azure/cognitive-services/bing-image-search/overview "Bing Image Search")|Bing Image Search returns a display of images determined to be relevant to the user's query.|
-|[Bing Visual Search](https://docs.microsoft.com/en-us/azure/cognitive-services/bing-visual-search/overview "Bing Visual Search")|Bing Visual Search provides returns insights about an image such as visually similar images, shopping sources for products found in the image, and related searches.|
-|[Bing Local Business Search](https://docs.microsoft.com/en-us/azure/cognitive-services/bing-local-business-search/overview "Bing Local Business Search")| Bing Local Business Search API enables your applications to find contact and location information about local businesses based on search queries.|
-|[Bing Spell Check](https://docs.microsoft.com/en-us/azure/cognitive-services/bing-spell-check/overview "Bing Spell Check")|Bing Spell Check allows you to perform contextual grammar and spell checking.|
+|[Anomaly Detector](./anomaly-detector/index.yml "Anomaly Detector") |Anomaly Detector allows you to monitor and detect abnormalities in your time series data.|
+|[Content Moderator](./content-moderator/overview.md "Content Moderator")|Content Moderator provides monitoring for possible offensive, undesirable, and risky content. |
+|[Personalizer](./personalizer/index.yml "Personalizer")|Personalizer allows you to choose the best experience to show to your users, learning from their real-time behavior. |
 
 
 ## References
@@ -121,11 +92,13 @@ List of APIS extracted from: https://github.com/MicrosoftDocs/azure-docs/blob/ma
 
 ## Agenda
 
+## Agenda
+
 1. [Presentation](01.presentation.md) :clock12: **(00:00)**
 1. [Introduction](02.introduction.md)
-1. [Azure Cognitive Services](03.azure-cognitive-services.md) :clock3: **15:00**
-2. **[Telegram Bot with Go](04.tgbot-go.md)**
-3. [Vision](05.vision.md) :clock1: **(01:00)**
-4. [Language](06.language.md) :clock130: **(01:30)**
-5. [Decision](07.decision.md)
-6. [Q&A](08.q&a.md) **(01:55)**
+1. [Azure Cognitive Services](03.azure-cognitive-services.md) :clock3: **00:00**
+2. [Telegram Bot with Go](04.tgbot-go.md)
+3. [Vision](05.vision.md) :clock1: **(00:00)**
+4. [Language](06.language.md) :clock130: **(00:00)**
+5. **[Decision](07.decision.md)**
+6. [Q&A](08.q&a.md) **(00:00)**
