--- a/03.cognitive-services/01.presentation.md
+++ b/03.cognitive-services/01.presentation.md
@@ -8,79 +8,31 @@ Since 1985 [Proge-Software](https://www.progesoftware.it/) produces high-technol
 - Site: https://www.progesoftware.it/
 - LinkedIn: https://www.linkedin.com/company/proge-software/
 
+## Federico Piai
+
+- Name: Federico Piai
+- Role: Data Scientist
+    - ETL and Data Warehouse with Synapse
+    - Analytics with PowerBI and Azure Analysis Services
+
+- LinkedIn: https://www.linkedin.com/in/federico-piai-51499630/
+
+## Alberto Mollica Graziano
+
+- Name: Alberto Mollica Graziano
+- Role: Data Scientist
+    - ETL and Data Warehouse with Synapse
+    - Analytics with PowerBI and Azure Analysis Services
+
+- LinkedIn: https://www.linkedin.com/in/alberto-mollica-graziano/
+
 ## Agenda
 
-1. [Presentation](01.presentation.md) :clock12: **(00:00)**
-   - Who Am I
-   - Who Is Proge-Software
-1. **[Introduction](02.introduction.md)**
-   - Azure
-     - Core Concepts
-       - Resource Group
-       - Resource
-       - Tags
-     - CLI
-   - REST Architecture
-     - REST over HTTP
-       - Maturity Model
-       - Hypertext as the Engine of Application State (HATEOAS)
-   - Azure Cognitive Services
+1. **[Presentation](01.presentation.md)** :clock12: **(00:00)**
+1. [Introduction](02.introduction.md)
 1. [Azure Cognitive Services](03.azure-cognitive-services.md) :clock3: **15:00**
-   - What are Azure Cognitive Services
-     - SDKs and API Specification
-   - **Vision APIs**
-   - Speech APIs
-   - **Language APIs**
-   - Search APIs
-   - **Decision APIs**
-1. [Telegram Bot with Go](04.tgbot-go.md)
-   - Go
-     - Tour of Go
-   - Telebot
-   - Azure SDK for Go
-     - Other Azure Go Packages
-   - Demo
 1. [Vision](05.vision.md) :clock1: **(01:00)**
-   - APIs
-     - **Face**
-       - Face Detection
-       - Face Verification
-       - Find similar faces
-       - Face Grouping
-       - Person identification
-       - Containers
-     - **Computer Vision**
-       - Analyze Images
-       - Extract text from images
-       - Moderate content in images
-       - Use containers
-     - Custom Vision Service
-     - **Form Recognizer (preview)**
-     - Ink Recognizer (preview)
-     - Video Indexer
-   - Demo
-1. [Language](06.language.md) :clock130: **(01:30)**
-   - APIs
-     - **Text Analytics**
-       - Sentiment Analysis
-       - Key Phrase Extraction
-       - Language Detection
-       - Named Entity Recognition
-     - Language Understanding (LUIS)
-     - **Translator Text**
-   - Demo
-1. [Decision](07.decision.md)
-   - APIs
-     - Anomaly Detector
-       - Demo
-       - Notebook
-     - **Content Moderator**
-       - Moderation APIs
-       - Review APIs
-         - Review tool
-     - Personalizer
-       - How does Personalizer select the best content item?
-       - When to call Personalizer
-       - How to design and implement Personalizer for your client application
-   - Demo
+1. [ImageDetectorBot] :clock1: **(00:00)**
+1. [Language](06.language.md) :clock1: **(01:30)**
+1. [QuestionAnsweringBot] :clock1: **(00:00)**
 1. [Q&A](08.q&a.md) **(01:55)**
