--- a/03.cognitive-services/09.azure-bot.md
+++ b/03.cognitive-services/09.azure-bot.md
@@ -10,8 +10,7 @@
     - [Publish](#publish)
     - [Connect](#connect)
     - [Evaluate](#evaluate)
--[Bot Framework SDK]
-- [Demo](#demo)
+- [Bot Framework SDK](#bot-framework-sdk)
 - [References](#references)
 - [Agenda](#agenda)
 
@@ -76,3 +75,6 @@ Connect your bot to channels such as Facebook, Messenger, Kik, Skype, Slack, M
 
 ### Evaluate 
 Use the data collected in Azure portal to identify opportunities to improve the capabilities and performance of your bot. You can get service-level and instrumentation data like traffic, latency, and integrations. Analytics also provides conversation-level reporting on user, message, and channel data. For more information, see [how to gather analytics](bot-service-manage-analytics.md).
+
+## Bot Framework SDK
+The Bot Framework, along with the Azure Bot Service, provides tools to build, test, deploy, and manage intelligent bots, all in one place. The Bot Framework includes a modular and extensible SDK for building bots, as well as tools, templates, and related AI services. With this framework, developers can create bots that use speech, understand natural language, handle questions and answers, and more.
