--- a/03.cognitive-services/09.azure-bot.md
+++ b/03.cognitive-services/09.azure-bot.md
@@ -25,10 +25,12 @@ Bots provide an experience that feels less like using a computer and more like d
 
 A bot can be thought of as a web application that has a conversational interface. A user connects to a bot through a channel such as Facebook, Slack, or Microsoft Teams.
 
--The bot reasons about input and performs relevant tasks. This can include asking the user for additional information or accessing services on behalf of the user.
--The bot performs recognition on the user's input to interpret what the user is asking for or saying.
--The bot generates responses to send to the user to communicate what the bot is doing or has done.
--Depending on how the bot is configured and how it's registered with the channel, users can interact with the bot through text or speech, and the conversation might include images and video.
+- The bot reasons about input and performs relevant tasks. This can include asking the user for additional information or accessing services on behalf of the user.
+- The bot performs recognition on the user's input to interpret what the user is asking for or saying.
+- The bot generates responses to send to the user to communicate what the bot is doing or has done.
+- Depending on how the bot is configured and how it's registered with the channel, users can interact with the bot through text or speech, and the conversation might include images and video.
+
+![Bot](media/what-is-a-bot.png)
 
 Bots are a lot like modern web applications, living on the internet and use APIs to send and receive messages. What's in a bot varies widely depending on what kind of bot it is. Modern bot software relies on a stack of technology and tools to deliver increasingly complex experiences on a wide variety of platforms. However, a simple bot could just receive a message and echo it back to the user with very little code involved. 
 
