--- a/03.cognitive-services/01.presentation.md
+++ b/03.cognitive-services/01.presentation.md
@@ -28,11 +28,11 @@ Since 1985 [Proge-Software](https://www.progesoftware.it/) produces high-technol
 
 ## Agenda
 
-1. **[Presentation](01.presentation.md)** :clock12: **(00:00)**
+1. **[Presentation](01.presentation.md)**
 1. [Introduction](02.introduction.md)
-1. [Azure Cognitive Services](03.azure-cognitive-services.md) :clock3: **15:00**
-1. [Vision](05.vision.md) :clock1: **(01:00)**
-1. [ImageDetectorBot] :clock1: **(00:00)**
-1. [Language](06.language.md) :clock1: **(01:30)**
-1. [QuestionAnsweringBot] :clock1: **(00:00)**
-1. [Q&A](08.q&a.md) **(01:55)**
+1. [Azure Cognitive Services](03.azure-cognitive-services.md)
+1. [Vision](04.vision.md.)
+1. [ImageDetectorBot]
+1. [Language](06.language.md)
+1. [QuestionAnsweringBot]
+1. [Q&A](08.q&a.md)
