--- a/03.cognitive-services/03.azure-cognitive-services.md
+++ b/03.cognitive-services/03.azure-cognitive-services.md
@@ -92,13 +92,11 @@ List of APIS extracted from: https://github.com/MicrosoftDocs/azure-docs/blob/ma
 
 ## Agenda
 
-## Agenda
-
-1. [Presentation](01.presentation.md) :clock12: **(00:00)**
+1. [Presentation](01.presentation.md)
 1. [Introduction](02.introduction.md)
-1. [Azure Cognitive Services](03.azure-cognitive-services.md) :clock3: **00:00**
-2. [Telegram Bot with Go](04.tgbot-go.md)
-3. [Vision](05.vision.md) :clock1: **(00:00)**
-4. [Language](06.language.md) :clock130: **(00:00)**
-5. **[Decision](07.decision.md)**
-6. [Q&A](08.q&a.md) **(00:00)**
+1. **[Azure Cognitive Services](03.azure-cognitive-services.md)**
+1. [Vision](04.vision.md.)
+1. [ImageDetectorBot]
+1. [Language](06.language.md)
+1. [QuestionAnsweringBot]
+1. [Q&A](08.q&a.md)
