--- a/03.cognitive-services/04.vision.md
+++ b/03.cognitive-services/04.vision.md
@@ -9,13 +9,12 @@
     - [Find similar faces](#find-similar-faces)
     - [Face Grouping](#face-grouping)
     - [Person identification](#person-identification)
-    - [Containers](#containers)
   - [Computer Vision](#computer-vision)
     - [Analyze Images](#analyze-images)
     - [Extract text from images](#extract-text-from-images)
     - [Moderate content in images](#moderate-content-in-images)
     - [Use containers](#use-containers)
-- [Demo](#demo)
+- [Custom Vision Service](#custom-vision-service)
 - [References](#references)
 - [Agenda](#agenda)
 
@@ -135,7 +134,6 @@ Then the algorithm trains to this data and calculates its own accuracy by testin
 Once the algorithm is trained, you can test, retrain, and eventually use it to classify new images according to the needs of your app.
 You can also export the model itself for offline use.
 
-## Demo
 
 ## References
 
@@ -166,11 +164,11 @@ You can also export the model itself for offline use.
 
 ## Agenda 
 
-1. [Presentation](01.presentation.md) :clock12: **(00:00)**
+1. [Presentation](01.presentation.md)
 1. [Introduction](02.introduction.md)
-1. [Azure Cognitive Services](03.azure-cognitive-services.md) :clock3: **15:00**
-2. [Telegram Bot with Go](04.tgbot-go.md)
-3. [Vision](05.vision.md) :clock1: **(01:00)**
-4. **[Language](06.language.md)** :clock130: **(01:30)**
-5. [Decision](07.decision.md)
-6. [Q&A](08.q&a.md) **(01:55)**
+1. [Azure Cognitive Services](03.azure-cognitive-services.md)
+1. **[Vision](04.vision.md.)**
+1. [ImageDetectorBot]
+1. [Language](06.language.md)
+1. [QuestionAnsweringBot]
+1. [Q&A](08.q&a.md)
