--- a/03.cognitive-services/05.azure-bot.md
+++ b/03.cognitive-services/05.azure-bot.md
@@ -80,3 +80,18 @@ Use the data collected in Azure portal to identify opportunities to improve the 
 
 ## Bot Framework SDK
 The Bot Framework, along with the Azure Bot Service, provides tools to build, test, deploy, and manage intelligent bots, all in one place. The Bot Framework includes a modular and extensible SDK for building bots, as well as tools, templates, and related AI services. With this framework, developers can create bots that use speech, understand natural language, handle questions and answers, and more.
+
+## References
+- [https://docs.microsoft.com/en-us/azure/bot-service/index-bf-sdk?view=azure-bot-service-4.0](https://docs.microsoft.com/en-us/azure/bot-service/index-bf-sdk?view=azure-bot-service-4.0)
+
+- [https://docs.microsoft.com/en-us/composer/](https://docs.microsoft.com/en-us/composer/)
+
+## Agenda
+1. [Presentation](01.presentation.md)
+1. [Introduction](02.introduction.md)
+1. [Azure Cognitive Services](03.azure-cognitive-services.md)
+1. [Vision](04.vision.md.)
+1. **[ImageDetectorBot]**
+1. [Language](06.language.md)
+1. **[QuestionAnsweringBot]**
+1. [Q&A](08.q&a.md)
