--- a/03.cognitive-services/04.vision.md
+++ b/03.cognitive-services/04.vision.md
@@ -168,7 +168,7 @@ You can also export the model itself for offline use.
 1. [Introduction](02.introduction.md)
 1. [Azure Cognitive Services](03.azure-cognitive-services.md)
 1. **[Vision](04.vision.md.)**
-1. [ImageDetectorBot]
+1. [ImageDetectorBot](05.azure-bot.md)
 1. [Language](06.language.md)
-1. [QuestionAnsweringBot]
+1. [QuestionAnsweringBot](05.azure-bot.md)
 1. [Q&A](08.q&a.md)
