--- a/03.cognitive-services/03.azure-cognitive-services.md
+++ b/03.cognitive-services/03.azure-cognitive-services.md
@@ -95,7 +95,7 @@ List of APIS extracted from: https://github.com/MicrosoftDocs/azure-docs/blob/ma
 1. [Presentation](01.presentation.md)
 1. [Introduction](02.introduction.md)
 1. **[Azure Cognitive Services](03.azure-cognitive-services.md)**
-1. [Vision](04.vision.md.)
+1. [Vision](04.vision.md)
 1. [ImageDetectorBot](05.azure-bot.md)
 1. [Language](06.language.md)
 1. [QuestionAnsweringBot](05.azure-bot.md)
