--- a/03.cognitive-services/06.language.md
+++ b/03.cognitive-services/06.language.md
@@ -94,11 +94,11 @@ The Translator Text API is part of the Azure [Cognitive Services API](https://do
 
 ## Agenda
 
-1. [Presentation](01.presentation.md) :clock12: **(00:00)**
+1. [Presentation](01.presentation.md)
 1. [Introduction](02.introduction.md)
-1. [Azure Cognitive Services](03.azure-cognitive-services.md) :clock3: **15:00**
-2. [Telegram Bot with Go](04.tgbot-go.md)
-3. [Vision](05.vision.md) :clock1: **(01:00)**
-4. [Language](06.language.md) :clock130: **(01:30)**
-5. **[Decision](07.decision.md)**
-6. [Q&A](08.q&a.md) **(01:55)**
+1. [Azure Cognitive Services](03.azure-cognitive-services.md)
+1. [Vision](04.vision.md)
+1. [ImageDetectorBot](05.azure-bot.md)
+1. **[Language](06.language.md)**
+1. [QuestionAnsweringBot](05.azure-bot.md)
+1. [Q&A](08.q&a.md)
