--- a/03.cognitive-services/05.azure-bot.md
+++ b/03.cognitive-services/05.azure-bot.md
@@ -90,7 +90,7 @@ The Bot Framework, along with the Azure Bot Service, provides tools to build, te
 1. [Presentation](01.presentation.md)
 1. [Introduction](02.introduction.md)
 1. [Azure Cognitive Services](03.azure-cognitive-services.md)
-1. [Vision](04.vision.md.)
+1. [Vision](04.vision.md)
 1. **[ImageDetectorBot](05.azure-bot.md)**
 1. [Language](06.language.md)
 1. **[QuestionAnsweringBot](05.azure-bot.md)**
