--- a/03.cognitive-services/03.azure-cognitive-services.md
+++ b/03.cognitive-services/03.azure-cognitive-services.md
@@ -1,7 +1,12 @@
 # Azure Cognitive Services <!-- omit in TOC -->
 
 ## Contents <!-- omit in TOC -->
-
+- [Azure](#azure)
+  - [Core Concepts](#core-concepts)
+    - [Resource Group](#resource-group)
+    - [Resource](#resource)
+    - [Tags](#tags)
+  - [CLI](#cli)
 - [What are Azure Cognitive Services](#what-are-azure-cognitive-services)
   - [SDKs and API Specification](#sdks-and-api-specification)
 - [Vision APIs](#vision-apis)
@@ -11,6 +16,40 @@
 - [Search APIs](#search-apis)
 - [References](#references)
 - [Agenda](#agenda)
+
+## Azure
+
+### Core Concepts
+
+In the following we will introduce some key concepts of Azure.
+In the [references section](#references) you can find the links to the official Microsoft documentation with screenshots and samples.
+
+#### Resource Group
+
+A resource group is a container that holds related resources for an Azure solution.
+The resource group can include all the resources for the solution, or only those resources that you want to manage as a group.
+You decide how you want to allocate resources to resource groups based on what makes the most sense for your organization.
+Generally, add resources that share the same lifecycle to the same resource group so you can easily deploy, update, and delete them as a group.
+
+#### Resource
+
+A resource is a manageable item that is available through Azure.
+Virtual machines, storage accounts, web apps, databases, and virtual networks are examples of resources.
+Resource groups, subscriptions, management groups, and tags are also examples of resources.
+
+#### Tags
+
+You apply tags to your Azure resources, resource groups, and subscriptions to logically organize them into a taxonomy.
+Each tag consists of a *name and a value pair*.
+For example, you can apply the name "Environment" and the value "Production" to all the resources in production.
+
+### CLI
+
+The Azure command-line interface (Azure CLI) is a set of commands used to create and manage Azure resources.
+The Azure CLI is available across Azure services and is designed to get you working quickly with Azure, with an emphasis on automation.
+
+The Azure CLI is available to install in Windows, macOS and Linux environments.
+It can also be run in a Docker container and Azure Cloud Shell.
 
 ## What are Azure Cognitive Services
 
