--- a/03.cognitive-services/02.azure-cognitive-services.md
+++ b/03.cognitive-services/02.azure-cognitive-services.md
@@ -122,20 +122,34 @@ List of APIS extracted from: https://github.com/MicrosoftDocs/azure-docs/blob/ma
 
 
 ## References
-
-- [https://docs.microsoft.com/en-us/azure/cognitive-services/](https://docs.microsoft.com/en-us/azure/cognitive-services/)
-- [https://azure.microsoft.com/en-us/services/cognitive-services/](https://azure.microsoft.com/en-us/services/cognitive-services/)
-- [https://docs.microsoft.com/en-us/azure/cognitive-services/welcome](https://docs.microsoft.com/en-us/azure/cognitive-services/welcome)
-- [https://github.com/Azure](https://github.com/Azure)
+- Azure
+  - Core Concepts:
+    - Resource Groups:
+      - [https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/manage-resource-groups-portal](https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/manage-resource-groups-portal)
+      - [https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/manage-resources-cli](https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/manage-resources-cli)
+    - Resources:
+      - [https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/overview](https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/overview)
+      - [https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/manage-resources-portal](https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/manage-resources-portal)
+      - [https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/manage-resources-cli](https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/manage-resources-cli)
+    - Tags:
+      - [https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/tag-resources](https://docs.microsoft.com/en-us/azure/azure-resource-manager/management/tag-resources)
+  - CLI:
+    - [https://docs.microsoft.com/en-us/cli/azure/install-azure-cli?view=azure-cli-latest](https://docs.microsoft.com/en-us/cli/azure/install-azure-cli?view=azure-cli-latest)
+    - [https://docs.microsoft.com/en-us/cli/azure/what-is-azure-cli?view=azure-cli-latest](https://docs.microsoft.com/en-us/cli/azure/what-is-azure-cli?view=azure-cli-latest)
+    - [https://docs.microsoft.com/en-us/cli/azure/get-started-with-azure-cli?view=azure-cli-latest](https://docs.microsoft.com/en-us/cli/azure/get-started-with-azure-cli?view=azure-cli-latest)
+- Cognitive Services    
+  - [https://docs.microsoft.com/en-us/azure/cognitive-services/](https://docs.microsoft.com/en-us/azure/cognitive-services/)
+  - [https://azure.microsoft.com/en-us/services/cognitive-services/](https://azure.microsoft.com/en-us/services/cognitive-services/)
+  - [https://docs.microsoft.com/en-us/azure/cognitive-services/welcome](https://docs.microsoft.com/en-us/azure/cognitive-services/welcome)
+  - [https://github.com/Azure](https://github.com/Azure)
   - [https://github.com/Azure?q=azure-sdk-for&type=&language=](https://github.com/Azure?q=azure-sdk-for&type=&language=)
 
 ## Agenda
 
 1. [Presentation](01.presentation.md)
-1. [Introduction](02.introduction.md)
-1. **[Azure Cognitive Services](03.azure-cognitive-services.md)**
-1. [Vision](04.vision.md)
-1. [ImageDetectorBot](05.azure-bot.md)
-1. [Language](06.language.md)
-1. [QuestionAnsweringBot](05.azure-bot.md)
-1. [Q&A](08.q&a.md)
+1. **[Azure Cognitive Services](02.azure-cognitive-services.md)**
+1. [Vision](03.vision.md)
+1. [ImageDetectorBot](04.azure-bot.md)
+1. [Language](05.language.md)
+1. [QuestionAnsweringBot](04.azure-bot.md)
+1. [Q&A](06.q&a.md)
