--- a/03.cognitive-services/05.language.md
+++ b/03.cognitive-services/05.language.md
@@ -8,6 +8,7 @@
   - [Key Phrase Extraction](#key-phrase-extraction)
   - [Language Detection](#language-detection)
   - [Named Entity Recognition](#named-entity-recognition)
+  - [Question&Answering](#questionanswering)
 - [Conversational Language Understanding](#conversational-language-understanding)
   - [Configure CLU](#configure-clu)
 - [Demo](#demo)
