Update container demo

--- a/04.open-source-ml/03.containers.md
+++ b/04.open-source-ml/03.containers.md
@@ -43,9 +43,8 @@ Which resource is isolated depends on the kind of namespace that has been create
 ## Docker
 
 Docker is a set of platform as a service (PaaS) products that use OS-level virtualization to deliver software in packages called containers.
-The software that hosts the containers is called Docker Engine.
-It was first started in 2013 and is developed by Docker, Inc.
-
+The software that hosts the containers is called `Docker Engine`.
+It was first started in 2013 and is developed by `Docker, Inc`.
 
 Docker can package an application and its dependencies in a virtual container that can run on any Linux, Windows, or macOS computer.
 This enables the application to run in a variety of locations, such as on-premises, in public or private cloud.
@@ -58,21 +57,149 @@ The Linux kernel's support for namespaces mostly isolates an application's view 
 Docker implements a high-level API to provide lightweight containers that run processes in isolation.
 Docker containers are standard processes, so it is possible to use kernel features to monitor their execution -- including for example the use of tools like strace to observe and intercede with system calls.
 
+### Docker Architecture
+
+Docker uses a client-server architecture.
+The Docker client talks to the Docker daemon, which does the heavy lifting of building, running, and distributing your Docker containers.
+The Docker client and daemon can run on the same system, or you can connect a Docker client to a remote Docker daemon.
+The Docker client and daemon communicate using a REST API, over UNIX sockets or a network interface.
+Another Docker client is Docker Compose, that lets you work with applications consisting of a set of containers.
+
+![image](https://docs.docker.com/engine/images/architecture.svg)
+
+
+### Docker Hub
+
+Docker Hub is a service provided by Docker for finding and sharing container images with your team.
+It is the world’s largest repository of container images with an array of content sources including container community developers, open source projects and independent software vendors (ISV) building and distributing their code in containers.
+
 
 ## Demo
+
+### Bash
+
+```bash
+user@myhost $ docker run -it --rm --user nobody --name unina-bash-demo bash:latest
+nobody@bash $ uname -ar     # same result as running the command on host
+nobody@bash $ ps aux        # lists only container's processes
+```
+
+### Simple Web App
+
+```bash
+user@myhost $ docker run -d --rm --name unina-nginx-demo nginx:latest
+user@myhost $ docker inspect -f '{{json .NetworkSettings.IPAddress}}' unina-nginx-demo # something like "172.0.1.[2-254]"
+user@myhost $ curl -X GET "http://$(docker inspect -f '{{json .NetworkSettings.IPAddress}}' unina-nginx-demo | tr -d '"')"
+<!DOCTYPE html>
+<html>
+<head>
+<title>Welcome to nginx!</title>
+<style>
+html { color-scheme: light dark; }
+body { width: 35em; margin: 0 auto;
+font-family: Tahoma, Verdana, Arial, sans-serif; }
+</style>
+</head>
+<body>
+<h1>Welcome to nginx!</h1>
+<p>If you see this page, the nginx web server is successfully installed and
+working. Further configuration is required.</p>
+
+<p>For online documentation and support please refer to
+<a href="http://nginx.org/">nginx.org</a>.<br/>
+Commercial support is available at
+<a href="http://nginx.com/">nginx.com</a>.</p>
+
+<p><em>Thank you for using nginx.</em></p>
+</body>
+</html>
+user@myhost $ docker logs unina-nginx-demo # to see the process logs
+```
+
+if you prefer a web browser you can navigate the URL with a browser, or, on Linux, execute the following command:
+
+```bash
+user@myhost $ xdg-open "http://$(docker inspect -f '{{json .NetworkSettings.IPAddress}}' unina-nginx-demo | tr -d '"')"
+```
+
+#### Host's port binding
+
+```bash
+user@myhost $ docker run -d --rm -p 9000:80 --name unina-nginx-demo-local nginx:latest
+user@myhost $ curl -X GET "http://localhost:9000"
+<!DOCTYPE html>
+<html>
+<head>
+<title>Welcome to nginx!</title>
+<style>
+html { color-scheme: light dark; }
+body { width: 35em; margin: 0 auto;
+font-family: Tahoma, Verdana, Arial, sans-serif; }
+</style>
+</head>
+<body>
+<h1>Welcome to nginx!</h1>
+<p>If you see this page, the nginx web server is successfully installed and
+working. Further configuration is required.</p>
+
+<p>For online documentation and support please refer to
+<a href="http://nginx.org/">nginx.org</a>.<br/>
+Commercial support is available at
+<a href="http://nginx.com/">nginx.com</a>.</p>
+
+<p><em>Thank you for using nginx.</em></p>
+</body>
+</html>
+user@myhost $ docker logs unina-nginx-demo-local # to see the process logs
+```
+
+### Docker-Compose Mongo in isolated network
+
+```yaml
+version: '3'
+services:
+  mongo:
+    image: mongo:latest
+    networks:
+      - unina-demo-mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: Supers3cret!
+    restart: always
+  mongo-express:
+    image: mongo-express:latest
+    networks:
+      - unina-demo-mongo
+    environment:
+      ME_CONFIG_MONGODB_URL: mongodb://root:Supers3cret!@mongo:27017
+      ME_CONFIG_MONGODB_AUTH_USERNAME: root
+      ME_CONFIG_MONGODB_AUTH_PASSWORD: Supers3cret!
+      ME_CONFIG_MONGODB_AUTH_DATABASE: db
+    ports:
+      - 10000:8081
+    restart: always
+volumes: {}
+networks:
+  unina-demo-mongo: {}
+```
 
 ## References
 
 - https://en.wikipedia.org/wiki/OS-level_virtualization
 - https://en.wikipedia.org/wiki/Cgroups
 - https://en.wikipedia.org/wiki/Linux_namespaces
+- https://docs.docker.com/get-started/overview/
+- https://docs.docker.com/engine/
+- https://docs.docker.com/docker-hub/
 
 
 ## More Links
 
+- https://docs.docker.com/engine/install/
 - https://www.katacoda.com/
 - https://docs.microsoft.com/en-us/learn/modules/intro-to-docker-containers/
 - https://docs.microsoft.com/en-us/learn/browse/?terms=containers
+- https://hub.docker.com/
 
 
 ## Agenda
