--- a/03.cognitive-services/04.azure-bot.md
+++ b/03.cognitive-services/04.azure-bot.md
@@ -87,6 +87,7 @@ The Bot Framework, along with the Azure Bot Service, provides tools to build, te
 - [https://docs.microsoft.com/en-us/composer/](https://docs.microsoft.com/en-us/composer/)
 
 ## Agenda
+1. [Presentation](01.presentation.md)
 1. [Azure Cognitive Services](02.azure-cognitive-services.md)
 1. [Vision](03.vision.md)
 1. **[ImageDetectorBot](04.azure-bot.md)**
