--- a/03.cognitive-services/05.language.md
+++ b/03.cognitive-services/05.language.md
@@ -27,14 +27,10 @@ _The croque monsieur avec frites was terrific. Bon appetit!_
 
 A human would rely on their own experiences and knowledge to understand that English is the main language, as "Croque monsieur avec frites" is just the name of a Dish, and "Bon Appetit!" is just a funny sentence ending as the plate was french. Developing an algorithm that correctly solves this kind of problems is not an easy task.
 
-Text analytics has many possible applications, such as:
-* A way to understand the request of a client in a ChatBot
-* A social media feed analyzer to detect sentiment around a political campaign or a product in market.
-* A document search application that extracts key phrases to help summarize the main subject matter of documents in a catalog.
-* A tool to extract brand information or company names from documents or other text for identification purposes.
+Text analytics has many possible applications: in ChatBot, social media feed analysis, searching and classifying documents.
 
 Azure provides several cloud-based API services that provides advanced natural language processing over raw text, with zero or few configuration needed:
-* The *Language service*, which includes four main functions: sentiment analysis, key phrase extraction, language detection, and named entity recognition.
+* The *Language service*, which includes four main functions: sentiment analysis, key phrase extraction, language detection, named entity recognition and Question Answering.
 * *Conversational Language Understanding*, a tool to predict overall meaning of a sentence, and pull out relevant, detailed information, typically used as support for a ChatBot.
 * The *Translator service*, which supports text-to-text translation.
 * The *Speech service*, which enables speech-to-text and speech-to-speech translation.
@@ -79,9 +75,12 @@ Question answering comprises of two capabilities:
 
 ## Conversational Language Understanding
 
-CLU is a tool that takes as input a user sentence (called utterrance), and outputs the main intent of the user, together with some relevant informations (entities). A common client application for LUIS is a chat bot.
+CLU is a tool for interpretating user commands, typically used for ChatBots or domotic appliances.
+There are currently two tools available in Azure: LUIS, which is the old version and is going to be deprecated, and CLU, which is currently in preview and it is going to replace LUIS.
 
-Take for instance the following sentence: Turn on the light in the kitchen
+The tool has an API that takes as input a user sentence (called utterrance), and outputs the main intent of the user, together with some relevant informations (entities). 
+
+Take for instance the following sentence: *Turn on the light in the kitchen*
 CLU may detect that the main intent of the user is to "turn on" a device, and entities are light (type of device) and kithcen (place). 
 
 A ChatBot application may query CLU to get the main intent and devices, it then should apply its own logic to fulfill the requested actions, and give a proper response: CLU is not conceived to provide answers to the user.
