Update kubernetes lecture

--- a/04.open-source-ml/05.kubernetes.md
+++ b/04.open-source-ml/05.kubernetes.md
@@ -9,7 +9,6 @@
 The Kubernetes command-line tool, kubectl, allows you to run commands against Kubernetes clusters.
 You can use kubectl to deploy applications, inspect and manage cluster resources, and view logs.
 
-
 ### kind
 
 kind is a tool for running local Kubernetes clusters using Docker container “nodes”.
@@ -56,7 +55,6 @@ docker ps -a
 ```
 
 ![image](./images/05.kubernetes/01.local-cluster-kind.jpg)
-
 
 # Kubernetes Components
 
@@ -126,7 +124,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx
-  labels: 
+  labels:
     app: nginx
 spec:
   containers:
@@ -137,7 +135,7 @@ spec:
       name: http-web-svc
 EOF
 
-# watch pod 
+# watch pod
 kubectl get pod -w nginx
 
 # when status changes in 'Running', interrupt with Ctrl+C and bind pod's port on localhost
@@ -153,7 +151,6 @@ An abstract way to expose an application running on a set of Pods as a network s
 
 In Kubernetes, a Service is an abstraction which defines a logical set of Pods and a policy by which to access them.
 The set of Pods targeted by a Service is usually determined by a selector.
-
 
 ```bash
 # create the service for the pod previously created
@@ -177,7 +174,8 @@ EOF
 You can use port forward to proxy to the service
 
 ```bash
-kubectl port-forward service/nginx-service 8080:80
+kubectl port-forward s
+ervice/nginx-service 8080:80
 
 # navigate http://localhost:8080 and you will have the page served by the pod through the service
 
@@ -186,7 +184,7 @@ xdg-open http://localhost:8080
 
 Or connect directly to the service through the node ip
 
-``` bash
+```bash
 ip=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[0].address}')
 port=$(kubectl get service nginx-service -o jsonpath='{.spec.ports[0].nodePort}')
 url="http://$ip:$port"
@@ -198,24 +196,51 @@ xdg-open $url
 
 ```
 
+### Volumes
+
+On-disk files in a container are ephemeral, which presents some problems for non-trivial applications when running in containers.
+One problem is the loss of files when a container crashes.
+The kubelet restarts the container but with a clean state.
+A second problem occurs when sharing files between containers running together in a Pod.
+
+### ConfigMaps
+
+A ConfigMap is an API object used to store non-confidential data in key-value pairs.
+Pods can consume ConfigMaps as environment variables, command-line arguments, or as configuration files in a volume.
+
+A ConfigMap allows you to decouple environment-specific configuration from your container images, so that your applications are easily portable.
+
+:warning: ConfigMap does not provide secrecy or encryption. If the data you want to store are confidential, use a Secret rather than a ConfigMap, or use additional (third party) tools to keep your data private.  :warning: 
+
+### Secrets
+
+A Secret is an object that contains a small amount of sensitive data such as a password, a token, or a key.
+Such information might otherwise be put in a Pod specification or in a container image.
+Using a Secret means that you don't need to include confidential data in your application code.
+
+Secrets are similar to ConfigMaps but are specifically intended to hold confidential data.
+
 ## References
 
 - https://kubernetes.io/docs/tasks/tools/
-- https://kubernetes.io/docs/reference/kubectl/
-- https://kubernetes.io/docs/concepts/overview/components/
-- https://kubernetes.io/docs/concepts/overview/working-with-objects/
 - https://k3s.io/
 - https://kind.sigs.k8s.io/
 - https://minikube.sigs.k8s.io/docs/
 - https://www.docker.com/products/docker-desktop/
 - https://docs.microsoft.com/en-us/azure/aks/intro-kubernetes
+- https://kubernetes.io/docs/reference/kubectl/
+- https://kubernetes.io/docs/concepts/overview/components/
+- https://kubernetes.io/docs/concepts/overview/working-with-objects/
+- https://kubernetes.io/docs/concepts/storage/volumes/
+- https://kubernetes.io/docs/concepts/configuration/configmap/
+- https://kubernetes.io/docs/concepts/configuration/secret/
 
 ## More Links
 
 - https://www.cncf.io/projects/
 - https://kubernetes.io/docs/concepts/architecture/
 - https://github.com/ahmetb/kubectx
-- 
+-
 
 ## Agenda
 
